--- a/index.html
+++ b/index.html
@@ -2652,7 +2652,7 @@
     // STATE
     // ============================================
     // API_BASE: Update PRODUCTION_API after deploying backend to Railway
-    const PRODUCTION_API = 'https://YOUR-RAILWAY-URL.railway.app'; // <-- UPDATE THIS
+    const PRODUCTION_API = 'https://web-production-08a17.up.railway.app';
     const API_BASE = window.location.hostname === 'localhost'
       ? 'http://localhost:5050'
       : PRODUCTION_API;
